# ece414-noah-maurice

./: README.md
Lab1/: CMakeLists.txt  blink2.c
Lab2/: CMakeLists.txt  main.c  sw_in.c  sw_in.h
Lab3/: CMakeLists.txt  debounce_sw1.c  debounce_sw1.h  debounce_sw2.c  debounce_sw2.h  game.c  game.h  led_out.c  led_out.h  main.c  sw_in.c  sw_in.h  uart-main.c  uart.c
Lab4/: CMakeLists.txt  TouchScreen.h  main.c  ts_lcd.c
Lab4/sch/Lab4Schematic/: Lab4Schematic.kicad_pro  Lab4Schematic.kicad_sch  ~Lab4Schematic.kicad_sch.lck
Lab5/: CMakeLists.txt  TFTMaster.c  button.c  button.h  calculation_fsm.c  calculation_fsm.h  calculator.c  calculator.h  main.c  ts_lcd.c  ts_lcd.h
Lab6/: CMakeLists.txt  TouchScreen.c  ic.h  ic_pio.pio.h  main.c  pwm_pin.h  ts_lcd.c  ts_lcd.h
Lab6/sch/: sch.kicad_pro  symbol-library.kicad_sym
Lab6/sch/Lab6Schematic/: Lab6Schematic.kicad_pro  Lab6Schematic.kicad_sch
